--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"analyze": "npx tsx count-components.ts",
-		"serve": "npx http-server . -p 8080 -o",
+		"serve": "npx http-server . -p 8080",
 		"build": "npx tsc count-components.ts --outDir dist --target es2020 --module esnext --moduleResolution node",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
